# 2025_TABTELE_S6_WILK

./: .gitignore  README.md  collection.json  ddl.sql  main.py  pyproject.toml  versions.json
.github/workflows/: auth.yml  core.yml  frontend.yml  gateway.yml
admin-ui/: Dockerfile  nginx.conf  registry.html  script.js  styles.css
api-gateway/: main.py  requirements.txt
auth/: .gitignore  Dockerfile  README.md  connection.py  loader.py  main.py  models.py  person.csv  pyproject.toml  role.csv  secret  user.csv
auth/src/: connection.py  loader.py  main.py  models.py
core/: .gitignore  Dockerfile  README.md  pyproject.toml  reservation.csv  vehicle.csv  vehicletype.csv
core/src/: connection.py  loader.py  main.py  models.py
docs/: README.md  system_floty_ddl.sql
gateway/: Dockerfile  README.md  main.py  pyproject.toml
shared/: .gitignore  pyproject.toml
shared/src/shared/: connection.py  models.py
web/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  test  tsconfig.json  webpack.common.js  webpack.config.js  webpack.parts.js
web/assets/: country.json  index.d.ts
web/src/: App.tsx  LoginScreen.tsx  fetchChain.ts  http.ts  index.html  main.ts  main.tsx  triggerCtx.tsx  websocket.tsx
web/src/components/: Avatar.tsx  Dropdown.tsx  DropdownItem.tsx  Form.tsx  LoadingButton.tsx  ModalContainer.tsx  Table.tsx  index.ts
web/src/features/: DashboardTabs.tsx  EmployeeTable.tsx  ProfileMenu.tsx  ProfileModal.tsx  ReservationTable.tsx  ToastBox.tsx  VehicleTable.tsx  index.ts
web/tests/: auth.spec.ts
(+23 files in other folders)
